--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     </build>
 
     <dependencies>
-        <!--<dependency>
+        <dependency>
             <groupId>org.apache.jmeter</groupId>
             <artifactId>ApacheJMeter_core</artifactId>
             <version>5.1</version>
@@ -30,7 +30,7 @@
             <groupId>org.apache.jmeter</groupId>
             <artifactId>ApacheJMeter_java</artifactId>
             <version>5.1</version>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-core</artifactId>
